# NeoIVClock

./: .gitignore  README.md
Data/Fonts/: font.c  out.c
Data/Fonts/16X16/: font.py  words.txt
Data/Icons/: convert.py  icon.c
Data/TF/: README.txt
Doc/YD-ESP32-S3/: pin.txt
Doc/datasheets/: IV18.docx  IV18模块脚定义.docx  ~$18模块脚定义.docx
Pcb/Libs/: NeoIVClock.PcbLib  NeoIVClock.SchLib
Pcb/NeoIVClock/: BottomPanel.SchDoc  LeftPannel.SchDoc  NEOIVClock.PcbDoc  NeoIVClock.BomDoc  NeoIVClock.OutJob  NeoIVClock.PrjPcb  NeoIVClock.PrjPcbStructure  NeoIVClock.SchDoc  RightPannel.SchDoc  TopPannel.SchDoc
Pcb/NeoIVClock/Project Outputs for NeoIVClock/: Design Rule Check - NeoIVClock.drc  Design Rule Check - NeoIVClock.html  NeoIVClock.xlsx
Shell/: OLED面板.dwg
Src/NeoIVClock/: CMakeLists.txt  partitions_16mb.csv  sdkconfig
Src/NeoIVClock/components/aht20/: CMakeLists.txt  aht20.c
Src/NeoIVClock/components/aht20/include/: aht20.h
Src/NeoIVClock/components/alarm/: CMakeLists.txt  alarm.c
Src/NeoIVClock/components/alarm/include/: alarm.h
Src/NeoIVClock/components/beeper/: CMakeLists.txt  beeper.c
Src/NeoIVClock/components/beeper/include/: beeper.h
Src/NeoIVClock/components/blem/: CMakeLists.txt  blem.c
Src/NeoIVClock/components/blem/include/: blem.h
Src/NeoIVClock/components/bmp280/: CMakeLists.txt  bmp280.c
Src/NeoIVClock/components/bmp280/include/: bmp280.h
Src/NeoIVClock/components/button/: CMakeLists.txt  button.c
Src/NeoIVClock/components/button/include/: button.h
Src/NeoIVClock/components/cext/: CMakeLists.txt  cext.c
Src/NeoIVClock/components/cext/include/: cext.h
Src/NeoIVClock/components/cjson_wrapper/: CMakeLists.txt  cjson_wrapper.c
Src/NeoIVClock/components/cjson_wrapper/include/: cjson_wrapper.h
Src/NeoIVClock/components/clock/: CMakeLists.txt  clock.c
Src/NeoIVClock/components/clock/include/: clock.h
Src/NeoIVClock/components/config/: CMakeLists.txt  config.c
Src/NeoIVClock/components/config/include/: config.h
Src/NeoIVClock/components/delay/: CMakeLists.txt  delay.c
Src/NeoIVClock/components/delay/include/: delay.h
Src/NeoIVClock/components/display/: CMakeLists.txt  display.c
Src/NeoIVClock/components/display/include/: display.h
Src/NeoIVClock/components/dpf_player/: CMakeLists.txt  dpf_player.c
Src/NeoIVClock/components/dpf_player/include/: dpf_player.h
Src/NeoIVClock/components/ds3231_rtc/: CMakeLists.txt  ds3231_rtc.c
Src/NeoIVClock/components/ds3231_rtc/include/: ds3231_rtc.h
Src/NeoIVClock/components/ec11/: CMakeLists.txt  ec11.c
Src/NeoIVClock/components/ec11/include/: ec11.h
Src/NeoIVClock/components/ens160/: CMakeLists.txt  ens160.c
Src/NeoIVClock/components/ens160/include/: ens160.h
Src/NeoIVClock/components/esp32_temp/: CMakeLists.txt  esp32_temp.c
Src/NeoIVClock/components/esp32_temp/include/: esp32_temp.h
Src/NeoIVClock/components/gpio_wrapper/: CMakeLists.txt  gpio_wrapper.c
Src/NeoIVClock/components/gpio_wrapper/include/: gpio_wrapper.h
Src/NeoIVClock/components/i2c_wrapper/: CMakeLists.txt  i2c_wrapper.c
Src/NeoIVClock/components/i2c_wrapper/include/: i2c_wrapper.h
Src/NeoIVClock/components/iv18/: CMakeLists.txt  iv18.c
Src/NeoIVClock/components/iv18/include/: iv18.h
Src/NeoIVClock/components/light_sensor/: CMakeLists.txt  light_sensor.c
Src/NeoIVClock/components/light_sensor/include/: light_sensor.h
Src/NeoIVClock/components/logger/: CMakeLists.txt  logger.c
Src/NeoIVClock/components/logger/include/: logger.h
Src/NeoIVClock/components/mini_font/: CMakeLists.txt  mini_font.c  mini_font_ascii.c  mini_font_chinese.c
Src/NeoIVClock/components/motion_sensor/: CMakeLists.txt  motion_sensor.c
Src/NeoIVClock/components/network_manager/: CMakeLists.txt  network_manager.c
Src/NeoIVClock/components/network_manager/include/: network_manager.h
Src/NeoIVClock/components/nm/: CMakeLists.txt  nm.c
Src/NeoIVClock/components/nm/include/: nm.h
Src/NeoIVClock/components/nvs_wrapper/: CMakeLists.txt  nvs_wrapper.c
Src/NeoIVClock/components/oled/: CMakeLists.txt  oled.c  oled_font.c
Src/NeoIVClock/components/oled_ext/: CMakeLists.txt  oled_ext.c  oled_ext_font.c  oled_ext_icon.c
Src/NeoIVClock/components/player/: CMakeLists.txt  player.c
Src/NeoIVClock/components/player/include/: player.h
Src/NeoIVClock/components/pms5003st/: CMakeLists.txt  pms5003st.c
Src/NeoIVClock/components/qrcode/: CMakeLists.txt  qrcode.c  qrcode_wrapper.c
Src/NeoIVClock/components/reporter/: CMakeLists.txt  reporter.c
Src/NeoIVClock/components/reporter/include/: reporter.h
Src/NeoIVClock/components/rom/: CMakeLists.txt  rom.c
Src/NeoIVClock/components/rom/include/: rom.h
Src/NeoIVClock/components/sensor_data/: CMakeLists.txt  sensor_data.c
Src/NeoIVClock/components/sensor_data/include/: sensor_data.h
Src/NeoIVClock/components/sm/: CMakeLists.txt  sm.c
Src/NeoIVClock/components/sm/include/: sm.h  sm_about.h  sm_clock.h  sm_common.h  sm_func_select.h  sm_net_access.h  sm_sensor.h  sm_set_alarm.h  sm_set_date.h  sm_set_net.h  sm_set_param.h  sm_set_time.h  sm_stop_watch.h  sm_timer.h
Src/NeoIVClock/components/sm/state_machines/: sm_about.c  sm_clock.c  sm_common.c  sm_func_select.c  sm_net_access.c  sm_sensor.c  sm_set_alarm.c  sm_set_date.c  sm_set_net.c  sm_set_param.c  sm_set_time.c  sm_stop_watch.c  sm_timer.c
Src/NeoIVClock/components/synthesizer/: CMakeLists.txt  synthesizer.c
Src/NeoIVClock/components/task/: CMakeLists.txt  task.c
Src/NeoIVClock/components/task/include/: task.h
Src/NeoIVClock/components/terminal/: CMakeLists.txt  terminal.c
Src/NeoIVClock/components/thermometer/: CMakeLists.txt  thermometer.c
Src/NeoIVClock/components/timer/: CMakeLists.txt  timer.c
Src/NeoIVClock/components/tpm300/: CMakeLists.txt  tpm300.c
Src/NeoIVClock/components/usart_wrapper/: CMakeLists.txt  usart_wrapper.c
Src/NeoIVClock/components/ws2812b/: CMakeLists.txt  ws2812b.c
Src/NeoIVClock/main/: CMakeLists.txt  aux_main.c  main.c
Src/NeoIVClock/main/include/: aux_main.h
Src/Server/: README  ivclock.conf  ivclock_server  ivclock_server.py  server.conf  server.py
(+19 files in other folders)
