idf_component_register(SRCS "main.c"
                    INCLUDE_DIRS "."
                    PRIV_REQUIRES "alarm"
                    PRIV_REQUIRES "beeper"
                    PRIV_REQUIRES "ec11"
                    PRIV_REQUIRES "clock"
                    PRIV_REQUIRES "config"
                    PRIV_REQUIRES "delay"                    
                    PRIV_REQUIRES "iv18"
                    PRIV_REQUIRES "ds3231_rtc"
                    PRIV_REQUIRES "gpio_wrapper"                    
                    PRIV_REQUIRES "i2c_wrapper"                    
                    PRIV_REQUIRES "logger"
                    PRIV_REQUIRES "motion_sensor"
                    PRIV_REQUIRES "player"
                    PRIV_REQUIRES "rom"                    
                    PRIV_REQUIRES "sm"
                    PRIV_REQUIRES "task"
                    PRIV_REQUIRES "terminal"                    
                    PRIV_REQUIRES "timer"
                    PRIV_REQUIRES "bmp280"
                    PRIV_REQUIRES "dpf_player"
                    PRIV_REQUIRES "oled"
                    PRIV_REQUIRES "pms5003st"
                    PRIV_REQUIRES "usart_wrapper")