idf_component_register(SRCS "main.c" "aux_main.c"
                    INCLUDE_DIRS "." "include"
                    REQUIRES "alarm"
                    REQUIRES "beeper"
                    REQUIRES "ec11"
                    REQUIRES "clock"
                    REQUIRES "config"
                    REQUIRES "delay"                    
                    REQUIRES "iv18"
                    REQUIRES "ds3231_rtc"
                    REQUIRES "gpio_wrapper"                    
                    REQUIRES "i2c_wrapper"                    
                    REQUIRES "logger"
                    REQUIRES "motion_sensor"
                    REQUIRES "player"
                    REQUIRES "rom"                    
                    REQUIRES "sm"
                    REQUIRES "task"
                    REQUIRES "terminal"                    
                    REQUIRES "timer"
                    REQUIRES "bmp280"
                    REQUIRES "dpf_player"
                    REQUIRES "oled"
                    REQUIRES "pms5003st"
                    REQUIRES "tpm300"
                    REQUIRES "light_sensor"
                    REQUIRES "usart_wrapper"
                    REQUIRES "sensor_data"
                    REQUIRES "reporter"
                    REQUIRES "esp_driver_gptimer")