idf_component_register(SRCS "clock.c"
                    INCLUDE_DIRS "include"
                    REQUIRES "logger"
                    REQUIRES "ds3231_rtc"
                    REQUIRES "task"
                    REQUIRES "sm"
                    REQUIRES "config"
                    REQUIRES "alarm"
                    REQUIRES "ec11"
                    REQUIRES "terminal"
                    REQUIRES "cext"
                    REQUIRES "iv18"
                    REQUIRES "timer"
                    REQUIRES "gpio_wrapper"
                    REQUIRES "sensor_data"
                    REQUIRES "ws2812b"
                    REQUIRES "esp_driver_gptimer")
