idf_component_register(SRCS "iv18.c"
                    INCLUDE_DIRS "include"
                    REQUIRES "logger"
                    REQUIRES "gpio_wrapper"
                    REQUIRES "esp_driver_ledc"
                    REQUIRES "delay"
                    REQUIRES "config"
                    REQUIRES "light_sensor"
                    REQUIRES "cext")
