idf_component_register(SRCS "iv18.c"
                    INCLUDE_DIRS "include"
                    REQUIRES "logger"
                    REQUIRES "gpio_wrapper"
                    REQUIRES "esp_driver_ledc"
                    REQUIRES "clock"
                    REQUIRES "config"
                    REQUIRES "light_sensor"
                    REQUIRES "cext")
