idf_component_register(SRCS "network_manager.c"
                    INCLUDE_DIRS "include"
                    REQUIRES "esp_wifi" 
                    REQUIRES "esp_event" 
                    REQUIRES "nvs_flash" 
                    REQUIRES "esp_http_server" 
                    REQUIRES "esp_netif"
                    REQUIRES "config"
                    REQUIRES "logger")