idf_component_register(SRCS "nm.c"
                    INCLUDE_DIRS "include"
                    REQUIRES "esp_wifi" 
                    REQUIRES "esp_event" 
                    REQUIRES "esp_http_server" 
                    REQUIRES "esp_http_client"
                    REQUIRES "esp_netif"
                    REQUIRES "lwip"
                    REQUIRES "config"
                    REQUIRES "task"
                    REQUIRES "cext"
                    REQUIRES "delay"
                    REQUIRES "logger")