idf_component_register(SRCS "player.c"
                    INCLUDE_DIRS "include"
                    REQUIRES "config"
                    REQUIRES "dpf_player"
                    REQUIRES "clock"
                    REQUIRES "delay"
                    REQUIRES "terminal"
                    REQUIRES "cext"
                    REQUIRES "logger")
