idf_component_register(SRCS "sensor_data.c"
                    INCLUDE_DIRS "include"
                    REQUIRES "bmp280"
                    REQUIRES "pms5003st"
                    REQUIRES "tpm300"
                    REQUIRES "aht20"
                    REQUIRES "cext"
                    REQUIRES "config"
                    REQUIRES "reporter"
                    REQUIRES "task"
                    REQUIRES "sm"
                    REQUIRES "ws2812b"
                    REQUIRES "logger")
