idf_component_register(
                    SRCS "sm.c" 
                    SRCS "state_machines/sm_clock.c"
                    SRCS "state_machines/sm_set_net.c" 
                    SRCS "state_machines/sm_sensor.c" 
                    SRCS "state_machines/sm_set_alarm.c"
                    SRCS "state_machines/sm_set_date.c"
                    SRCS "state_machines/sm_set_param.c"
                    SRCS "state_machines/sm_set_time.c"
                    SRCS "state_machines/sm_stop_watch.c"
                    SRCS "state_machines/sm_timer.c"
                    SRCS "state_machines/sm_func_select.c"
                    SRCS "state_machines/sm_common.c"
                    INCLUDE_DIRS "include"
                    REQUIRES "task"
                    REQUIRES "pms5003st"
                    REQUIRES "sensor_data"
                    REQUIRES "reporter"
                    REQUIRES "clock"
                    REQUIRES "iv18"
                    REQUIRES "oled"
                    REQUIRES "oled_ext"
                    REQUIRES "cext"
                    REQUIRES "alarm"
                    REQUIRES "logger")
