idf_component_register(SRCS "task.c"
                    INCLUDE_DIRS "include"
                    REQUIRES "sm"
                    REQUIRES "ec11"
                    REQUIRES "clock"
                    REQUIRES "iv18"
                    REQUIRES "alarm"
                    REQUIRES "player"
                    REQUIRES "sensor_data"
                    REQUIRES "logger")
